Xgboost first model

--- a/model_pm_xgboost.ipynb
+++ b/model_pm_xgboost.ipynb
@@ -471,7 +471,7 @@
     "preds = model.predict(dtest_reg)\n",
     "rmse = mean_squared_error(y_test, preds, squared=False)\n",
     "\n",
-    "print(f\"RMSE of the base model: {rmse:.3f}\")\n"
+    "print(f\"RMSE of the base model: {rmse:.3f}\")"
    ]
   },
   {
