--- a/Challenge3.ipynb
+++ b/Challenge3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,16 @@
     "\n",
     "# Data Modeling\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, f1_score\n",
     "import xgboost as xgb\n",
     "\n",
     "\n",
     "# Data Vizualization Librairies\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +339,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +424,7 @@
        "freq     18112       14030    15964"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +469,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,12 +483,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating Target and Explicative Datasets\n",
-    "X, y = df.drop('default-payment-next-month', axis=1), df['default-payment-next-month']"
+    "df_training = df[(~df['default-payment-next-month'].isna())]\n",
+    "df_prediction = df[(df['default-payment-next-month'].isna())]\n",
+    "\n",
+    "X, y = df_training.drop(['ID', 'default-payment-next-month'], axis=1), df_training['default-payment-next-month']"
    ]
   },
   {
@@ -489,20 +503,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Standard Sklearn Split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=17)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=17, test_size=0.3)\n",
+    "# Converting to Xgboost Matrix\n",
+    "dtrain_reg = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
+    "dtest_reg = xgb.DMatrix(X_test, y_test, enable_categorical=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Defining Hyperparameters\n",
+    "params = {\n",
+    "    \"objective\": \"binary:logistic\",\n",
+    "    # \"tree_method\": \"gpu_hist\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining and Training Model\n",
+    "n = 100\n",
+    "model = xgb.train(\n",
+    "    params=params,\n",
+    "    dtrain=dtrain_reg,\n",
+    "    num_boost_round=n,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE of the base model: 0.405\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RMSE Validation\n",
+    "preds = model.predict(dtest_reg)\n",
+    "rmse = mean_squared_error(y_test, preds, squared=False)\n",
+    "\n",
+    "print(f\"RMSE of the base model: {rmse:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# F1_Score Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faireness Validation"
+   ]
   }
  ],
  "metadata": {
