--- a/Challenge3.ipynb
+++ b/Challenge3.ipynb
@@ -35,6 +35,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Fonctions utilitaires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAgeCat(age: int) -> str:\n",
+    "    cat: str = \"\"\n",
+    "\n",
+    "    if(age < 35):\n",
+    "        cat = \"34 & -\"\n",
+    "    elif (age >=35 and age < 45):\n",
+    "        cat = \"35-44\"\n",
+    "    elif (age >= 45 and age < 55):\n",
+    "        cat = \"45-54\"\n",
+    "    elif (age >= 55 and age < 65):\n",
+    "        cat = \"55-64\"\n",
+    "    else:\n",
+    "        cat = \"65 & +\"\n",
+    "\n",
+    "    return cat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Load Dataset"
    ]
   },
@@ -598,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
