--- a/Challenge3.ipynb
+++ b/Challenge3.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Librairies\n",
     "import pandas as pd\n",
@@ -19,46 +27,12 @@
     "\n",
     "# Data Modeling\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, f1_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "import xgboost as xgb\n",
     "\n",
     "\n",
     "# Data Vizualization Librairies\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fonctions utilitaires"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getAgeCat(age: int) -> str:\n",
-    "    cat: str = \"\"\n",
-    "\n",
-    "    if(age < 35):\n",
-    "        cat = \"34 & -\"\n",
-    "    elif (age >=35 and age < 45):\n",
-    "        cat = \"35-44\"\n",
-    "    elif (age >= 45 and age < 55):\n",
-    "        cat = \"45-54\"\n",
-    "    elif (age >= 55 and age < 65):\n",
-    "        cat = \"55-64\"\n",
-    "    else:\n",
-    "        cat = \"65 & +\"\n",
-    "\n",
-    "    return cat"
+    "import seaborn as sns"
    ]
   },
   {
@@ -70,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +343,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,14 +355,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create \"Remaining Amount\" Column\n",
+    "# df[\"RMN_AMT1\"] = df[\"BILL_AMT1\"] - df[\"PAY_AMT1\"]\n",
+    "df[\"RMN_AMT2\"] = df[\"BILL_AMT2\"] - df[\"PAY_AMT1\"]\n",
+    "df[\"RMN_AMT3\"] = df[\"BILL_AMT3\"] - df[\"PAY_AMT2\"]\n",
+    "df[\"RMN_AMT4\"] = df[\"BILL_AMT4\"] - df[\"PAY_AMT3\"]\n",
+    "df[\"RMN_AMT5\"] = df[\"BILL_AMT5\"] - df[\"PAY_AMT4\"]\n",
+    "df[\"RMN_AMT6\"] = df[\"BILL_AMT6\"] - df[\"PAY_AMT5\"]\n",
+    "\n",
+    "# Create \"Sufficient Payment\"\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT2\"] = np.where(df[\"RMN_AMT2\"] <= 0, 1, 0)\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT3\"] = np.where(df[\"RMN_AMT3\"] <= 0, 1, 0)\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT4\"] = np.where(df[\"RMN_AMT4\"] <= 0, 1, 0)\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT5\"] = np.where(df[\"RMN_AMT5\"] <= 0, 1, 0)\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT6\"] = np.where(df[\"RMN_AMT6\"] <= 0, 1, 0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +443,7 @@
        "freq     18112       14030    15964"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +488,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,15 +502,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating Target and Explicative Datasets\n",
-    "df_training = df[(~df['default-payment-next-month'].isna())]\n",
-    "df_prediction = df[(df['default-payment-next-month'].isna())]\n",
-    "\n",
-    "X, y = df_training.drop(['ID', 'default-payment-next-month'], axis=1), df_training['default-payment-next-month']"
+    "X, y = df.drop('default-payment-next-month', axis=1), df['default-payment-next-month']"
    ]
   },
   {
@@ -533,83 +526,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Standard Sklearn Split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=17, test_size=0.3)\n",
-    "# Converting to Xgboost Matrix\n",
-    "dtrain_reg = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
-    "dtest_reg = xgb.DMatrix(X_test, y_test, enable_categorical=True)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=17)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Defining Hyperparameters\n",
-    "params = {\n",
-    "    \"objective\": \"binary:logistic\",\n",
-    "    # \"tree_method\": \"gpu_hist\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defining and Training Model\n",
-    "n = 100\n",
-    "model = xgb.train(\n",
-    "    params=params,\n",
-    "    dtrain=dtrain_reg,\n",
-    "    num_boost_round=n,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE of the base model: 0.405\n"
-     ]
-    }
-   ],
-   "source": [
-    "# RMSE Validation\n",
-    "preds = model.predict(dtest_reg)\n",
-    "rmse = mean_squared_error(y_test, preds, squared=False)\n",
-    "\n",
-    "print(f\"RMSE of the base model: {rmse:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# F1_Score Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Faireness Validation"
-   ]
+   "source": []
   }
  ],
  "metadata": {
