--- a/Challenge3.ipynb
+++ b/Challenge3.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,14 @@
     "df[\"SUFFICIENT_PAYMENT_AMT3\"] = np.where(df[\"RMN_AMT3\"] <= 0, 1, 0)\n",
     "df[\"SUFFICIENT_PAYMENT_AMT4\"] = np.where(df[\"RMN_AMT4\"] <= 0, 1, 0)\n",
     "df[\"SUFFICIENT_PAYMENT_AMT5\"] = np.where(df[\"RMN_AMT5\"] <= 0, 1, 0)\n",
-    "df[\"SUFFICIENT_PAYMENT_AMT6\"] = np.where(df[\"RMN_AMT6\"] <= 0, 1, 0)"
+    "df[\"SUFFICIENT_PAYMENT_AMT6\"] = np.where(df[\"RMN_AMT6\"] <= 0, 1, 0)\n",
+    "\n",
+    "# Add weight to most recent months\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT2\"] = df[\"SUFFICIENT_PAYMENT_AMT2\"]*1.4\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT3\"] = df[\"SUFFICIENT_PAYMENT_AMT3\"]*1.3\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT4\"] = df[\"SUFFICIENT_PAYMENT_AMT4\"]*1.2\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT5\"] = df[\"SUFFICIENT_PAYMENT_AMT5\"]*1.1\n",
+    "df[\"SUFFICIENT_PAYMENT_AMT6\"] = df[\"SUFFICIENT_PAYMENT_AMT6\"]*1"
    ]
   },
   {
