--- a/Challenge3_pm.ipynb
+++ b/Challenge3_pm.ipynb
@@ -493,38 +493,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finding Protected Groups\n",
-    "# df['group'] = df.apply(lambda x: x['SEX'] + '-' + x['EDUCATION'] + '-' + x['MARRIAGE'], axis=1)\n",
-    "# noDefault = df[df['default-payment-next-month'] == 0].groupby(['group'])['default-payment-next-month'].count().rename(\"noDefault\")\n",
-    "# default = df[df['default-payment-next-month'] == 1].groupby(['group'])['default-payment-next-month'].count().rename(\"default\")\n",
-    "# df_groups = pd.concat([noDefault, default], axis=1).fillna(0)\n",
-    "# df_groups[\"total\"] = df_groups.apply(lambda x : x[\"noDefault\"] + x[\"default\"], axis=1)\n",
-    "# df_groups[\"propDefault\"] = df_groups.apply(lambda x : x[\"default\"]/x[\"total\"], axis=1)\n",
-    "# propDefault_mean = df_groups[\"propDefault\"].mean()\n",
-    "# propDefault_median = df_groups[\"propDefault\"].median()\n",
-    "\n",
-    "# df_groups['protected'] = np.where(df_groups['propDefault'] > propDefault_median, 1, 0)\n",
-    "# df_groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tagging Protected Group\n",
-    "# df = df.merge(df_groups['protected'], on='group')\n",
-    "# df.set_index(['ID'], inplace=True)\n",
-    "# df.drop(['group'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cats = df.select_dtypes(exclude=np.number).columns.tolist()\n",
     "for cat in cats:\n",
     "    df[cat] = df[cat].astype('category')"
@@ -532,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,13 +536,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining Hyperparameters\n",
     "params = {\n",
     "    \"objective\": \"binary:logistic\",\n",
+    "    # 'max_depth': 4,\n",
+    "    'learning_rate': 0.1\n",
     "    # \"num_class\": 2\n",
     "    # \"tree_method\": \"gpu_hist\"\n",
     "}"
@@ -582,12 +552,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining and Training Model\n",
-    "n = 50\n",
+    "n = 100\n",
     "model = xgb.train(\n",
     "    params=params,\n",
     "    dtrain=dtrain_reg,\n",
@@ -597,16 +567,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.788\n",
-      "0.439647577092511\n",
-      "RMSE of the base model: 0.398\n"
+      "0.796\n",
+      "0.4506283662477558\n",
+      "RMSE of the base model: 0.393\n"
      ]
     }
    ],
@@ -624,30 +594,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "preds_xgb = pd.Series(preds_xgb)\n",
-    "y_test = pd.DataFrame(y_test)\n",
-    "y_test[\"pred\"] = preds_xgb.values\n",
-    "df_out_group = pd.concat([X_test[['SEX', 'MARRIAGE', 'EDUCATION']], y_test], axis=1)\n",
+    "y_test_di1 = pd.DataFrame(y_test)\n",
+    "y_test_di1[\"pred\"] = preds_xgb.values\n",
+    "df_out_group = pd.concat([X_test[['SEX', 'MARRIAGE', 'EDUCATION']], y_test_di1], axis=1)\n",
     "df_out_group.rename(columns={'pred': 'score', 'default-payment-next-month': 'label_value'}, inplace=True)\n",
     "\n",
-    "df_out_bias = pd.concat([X_test, y_test], axis=1)\n",
+    "df_out_bias = pd.concat([X_test, y_test_di1], axis=1)\n",
     "df_out_bias.rename(columns={'pred': 'score', 'default-payment-next-month': 'label_value'}, inplace=True) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_disparity_predefined_group()\n"
+      "get_disparity_predefined_group()\n",
+      "Aggregate Normalized DI: 0.04\n"
      ]
     }
    ],
@@ -658,7 +629,7 @@
     "df_out_group['SEX'] = df_out_group['SEX'].astype('str')\n",
     "df_out_group['MARRIAGE'] = df_out_group['MARRIAGE'].astype('str')\n",
     "df_out_group['EDUCATION'] = df_out_group['EDUCATION'].astype('str')\n",
-    "xtabs, _ = g.get_crosstabs(df_out_group)\n",
+    "xtab, _ = g.get_crosstabs(df_out_group)\n",
     "\n",
     "b = Bias()\n",
     "\n",
@@ -677,12 +648,206 @@
     "    'EDUCATION': 'unknown',\n",
     "}\n",
     "\n",
-    "bdf = b.get_disparity_predefined_groups(xtabs, original_df=df_out_group, ref_groups_dict=ref_groups_dict)\n",
+    "bdf1 = b.get_disparity_predefined_groups(xtab, original_df=df_out_group, ref_groups_dict=ref_groups_dict)\n",
     "\n",
     "# Calculate Disparate Impact (DI) manually and create a custom column\n",
-    "bdf['disparity_index'] = 1 - abs(bdf['fpr'] - 1)\n",
+    "bdf1['disparity_index'] = 1 - abs(bdf1['fpr'] - 1)\n",
+    "bdf1['weight_adjustment'] = 1 - bdf1['disparity_index']\n",
     "\n",
-    "\n"
+    "# Define the sensitive attribute categories\n",
+    "# Calculate the aggregate Normalized DI (simple average)\n",
+    "aggregate_normalized_di = bdf1['disparity_index'].sum() / len(bdf1['disparity_index'])\n",
+    "\n",
+    "# Print the aggregate Normalized DI\n",
+    "print(f'Aggregate Normalized DI: {aggregate_normalized_di:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distributing Weight in Dataset\n",
+    "X2 = X\n",
+    "\n",
+    "X2['sex_weight'] = ''\n",
+    "w = bdf1.query('attribute_name == \"SEX\" and attribute_value == \"female\"')['weight_adjustment'].values[0]\n",
+    "X2['sex_weight'] = np.where(X2['SEX'] == \"female\", w, X2['sex_weight'])\n",
+    "w = bdf1.query('attribute_name == \"SEX\" and attribute_value == \"male\"')['weight_adjustment'].values[0]\n",
+    "X2['sex_weight'] = np.where(X2['SEX'] == \"male\", w, X2['sex_weight'])\n",
+    "\n",
+    "X2['education_weight'] = ''\n",
+    "w = bdf1.query('attribute_name == \"EDUCATION\" and attribute_value == \"graduate school\"')['weight_adjustment'].values[0]\n",
+    "X2['education_weight'] = np.where(X2['EDUCATION'] == \"graduate school\", w, X2['education_weight'])\n",
+    "w = bdf1.query('attribute_name == \"EDUCATION\" and attribute_value == \"high school\"')['weight_adjustment'].values[0]\n",
+    "X2['education_weight'] = np.where(X2['EDUCATION'] == \"high school\", w, X2['education_weight'])\n",
+    "X2['education_weight'] = np.where(X2['EDUCATION'] == \"graduate school\", w, X2['education_weight'])\n",
+    "w = bdf1.query('attribute_name == \"EDUCATION\" and attribute_value == \"others\"')['weight_adjustment'].values[0]\n",
+    "X2['education_weight'] = np.where(X2['EDUCATION'] == \"others\", w, X2['education_weight'])\n",
+    "w = bdf1.query('attribute_name == \"EDUCATION\" and attribute_value == \"university\"')['weight_adjustment'].values[0]\n",
+    "X2['education_weight'] = np.where(X2['EDUCATION'] == \"university\", w, X2['education_weight'])\n",
+    "w = bdf1.query('attribute_name == \"EDUCATION\" and attribute_value == \"unknown\"')['weight_adjustment'].values[0]\n",
+    "X2['education_weight'] = np.where(X2['EDUCATION'] == \"unknown\", w, X2['education_weight'])\n",
+    "\n",
+    "X2['marriage_weight'] = ''\n",
+    "w = bdf1.query('attribute_name == \"MARRIAGE\" and attribute_value == \"married\"')['weight_adjustment'].values[0]\n",
+    "X2['marriage_weight'] = np.where(X2['MARRIAGE'] == \"married\", w, X2['marriage_weight'])\n",
+    "w = bdf1.query('attribute_name == \"MARRIAGE\" and attribute_value == \"single\"')['weight_adjustment'].values[0]\n",
+    "X2['marriage_weight'] = np.where(X2['MARRIAGE'] == \"single\", w, X2['marriage_weight'])\n",
+    "w = bdf1.query('attribute_name == \"MARRIAGE\" and attribute_value == \"others\"')['weight_adjustment'].values[0]\n",
+    "X2['marriage_weight'] = np.where(X2['MARRIAGE'] == \"others\", w, X2['marriage_weight'])\n",
+    "w = bdf1.query('attribute_name == \"MARRIAGE\" and attribute_value == \"unknown\"')['weight_adjustment'].values[0]\n",
+    "X2['marriage_weight'] = np.where(X2['MARRIAGE'] == \"unknown\", w, X2['marriage_weight'])\n",
+    "\n",
+    "X2['composite_weight'] = X2['sex_weight'] * X2['education_weight'] * X2['marriage_weight']\n",
+    "X2.drop(['sex_weight', 'education_weight', 'marriage_weight'], axis=1, inplace=True)\n",
+    "X2['composite_weight'] = X2['composite_weight'].astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train2, X_test2, y_train2, y_test2 = train_test_split(X2, y, random_state=17)\n",
+    "sensitive_train2, sensitive_test2 = X_train2[['SEX', 'MARRIAGE', 'EDUCATION']], X_test2[['SEX', 'MARRIAGE', 'EDUCATION']]\n",
+    "weight_train = X_train2['composite_weight']\n",
+    "weight_test = X_test2['composite_weight']\n",
+    "X_train2.drop('composite_weight', axis=1, inplace=True)\n",
+    "X_test2.drop('composite_weight', axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "# XGBoost Matrix\n",
+    "dtrain_reg2 = xgb.DMatrix(X_train2, y_train2, enable_categorical=True, weight=weight_train)\n",
+    "dtest_reg2 = xgb.DMatrix(X_test2, y_test2, enable_categorical=True, weight=weight_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining Hyperparameters\n",
+    "params = {\n",
+    "    \"objective\": \"binary:logistic\",\n",
+    "    # 'max_depth': 4,\n",
+    "    'learning_rate': 0.1\n",
+    "    # \"num_class\": 2\n",
+    "    # \"tree_method\": \"gpu_hist\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining and Training Model\n",
+    "n = 100\n",
+    "model = xgb.train(\n",
+    "    params=params,\n",
+    "    dtrain=dtrain_reg,\n",
+    "    num_boost_round=n,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.796\n",
+      "0.4506283662477558\n",
+      "RMSE of the base model: 0.393\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RMSE Validation\n",
+    "preds = model.predict(dtest_reg2)\n",
+    "rmse = mean_squared_error(y_test2, preds, squared=False)\n",
+    "\n",
+    "preds_xgb = np.where(preds < 0.5, 0, 1)\n",
+    "print(accuracy_score(y_test2, preds_xgb))\n",
+    "print(f1_score(y_test2, preds_xgb))\n",
+    "\n",
+    "print(f\"RMSE of the base model: {rmse:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_disparity_predefined_group()\n",
+      "Aggregate Normalized DI: 0.04\n",
+      "Aggregate Normalized DI: 0.04\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds_xgb = pd.Series(preds_xgb)\n",
+    "y_test_di1 = pd.DataFrame(y_test2)\n",
+    "y_test_di1[\"pred\"] = preds_xgb.values\n",
+    "df_out_group = pd.concat([X_test2[['SEX', 'MARRIAGE', 'EDUCATION']], y_test_di1], axis=1)\n",
+    "df_out_group.rename(columns={'pred': 'score', 'default-payment-next-month': 'label_value'}, inplace=True)\n",
+    "\n",
+    "df_out_bias = pd.concat([X_test2, y_test_di1], axis=1)\n",
+    "df_out_bias.rename(columns={'pred': 'score', 'default-payment-next-month': 'label_value'}, inplace=True) \n",
+    "\n",
+    "g = Group()\n",
+    "\n",
+    "df_out_group.dtypes\n",
+    "df_out_group['SEX'] = df_out_group['SEX'].astype('str')\n",
+    "df_out_group['MARRIAGE'] = df_out_group['MARRIAGE'].astype('str')\n",
+    "df_out_group['EDUCATION'] = df_out_group['EDUCATION'].astype('str')\n",
+    "xtab, _ = g.get_crosstabs(df_out_group)\n",
+    "\n",
+    "b = Bias()\n",
+    "\n",
+    "# Calculate DI\n",
+    "ref_groups_dict = {\n",
+    "    'SEX': 'female',\n",
+    "    'SEX': 'male',\n",
+    "    'MARRIAGE': 'married',\n",
+    "    'MARRIAGE': 'others',\n",
+    "    'MARRIAGE': 'single',\n",
+    "    'MARRIAGE': 'unknown',\n",
+    "    'EDUCATION': 'graduate school',\n",
+    "    'EDUCATION': 'high school',\n",
+    "    'EDUCATION': 'others',\n",
+    "    'EDUCATION': 'university',\n",
+    "    'EDUCATION': 'unknown',\n",
+    "}\n",
+    "\n",
+    "bdf1 = b.get_disparity_predefined_groups(xtab, original_df=df_out_group, ref_groups_dict=ref_groups_dict)\n",
+    "\n",
+    "# Calculate Disparate Impact (DI) manually and create a custom column\n",
+    "bdf1['disparity_index'] = 1 - abs(bdf1['fpr'] - 1)\n",
+    "bdf1['weight_adjustment'] = 1 - bdf1['disparity_index']\n",
+    "\n",
+    "# Define the sensitive attribute categories\n",
+    "# Calculate the aggregate Normalized DI (simple average)\n",
+    "aggregate_normalized_di2 = bdf1['disparity_index'].sum() / len(bdf1['disparity_index'])\n",
+    "\n",
+    "# Print the aggregate Normalized DI\n",
+    "\n",
+    "print(f'Aggregate Normalized DI: {aggregate_normalized_di:.2f}')\n",
+    "print(f'Aggregate Normalized DI: {aggregate_normalized_di2:.2f}')\n",
+    "print(aggregate_normalized_di / aggregate_normalized_di2)"
    ]
   }
  ],
